--- a/7 in 7.md
+++ b/7 in 7.md
@@ -1,5 +1,15 @@
 ## Prototype 1
-
+#### Question: How can I establish the rules to show the relationship between music and visual pattern?
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UK5oyO7au0A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 For the first prototype, I continued the process I've done before to draw a pattern for my friend's composition. But this time I tried to establish a rule of the relationship between visual work and music. I'll give this picture to my friend again and asked him how he will compose according it. This time I find like it's so hard to establish a rule because there is lots of parameters in both music and visual pattern. What I wanna find before, the emotion of certain chords or certain progresion, is not existed as well because there are many other parameters in the music would affect emotion. On the other hand, the same chords progression might lead to different emotion if they are in different context. So I decided to do this in a different direction.
+
+## Prototype 2
+#### Question: How can I show the timeline of a music in different visual ways?
+Whether to visualize music or to translate visual pattern into music all need to consider the timeline of music. So for prototpye 2, I was thinking about indicating timeline in different ways. I don't want to be limited to 2D medium, so I tried to indicate timeline in 3D space. 
+
+##### 2D Timeline
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3663.jgp)
+##### 3D Timeline
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3660.jgp)
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3661.jgp)
