Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -14,3 +14,8 @@ Whether to visualize music or to translate visual pattern into music all need to
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3661.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3660.jpg)
 
+## Prototype 3
+#### Question: How can I get people interactive with my project? How can I make making music more accesible by using some visual pattern?
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cFtoYe1XPtk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+I found it pretty interesting to make a rule of translating what people draw into music. This time I only considered pitch and bass line. I really want to explore more for the next day. I'd consider how to create melody and chord progression with visual pattern.
+
