Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -15,7 +15,13 @@ Whether to visualize music or to translate visual pattern into music all need to
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3660.jpg)
 
 ## Prototype 3
-#### Question: How can I get people interactive with my project? How can I make making music more accesible by using some visual pattern?
+#### Question: How can I get people interactive with my project? How can I make making music more accesible by using some visual pattern? How can I make people create melody by drawing?
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cFtoYe1XPtk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 I found it pretty interesting to make a rule of translating what people draw into music. This time I only considered pitch and bass line. I really want to explore more for the next day. I'd consider how to create melody and chord progression with visual pattern.
 
+
+## Prototype 4
+#### Question: How can I help people feel and understand the nature of music by making their own music clips? How can I let people create chord progression by using visual pattern?
+<iframe width="560" height="315" src="https://www.youtube.com/embed/s2c2LDxyrPQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3698.jpg)
+I found the process so interesting and I think there's a lot I can do to make it better.
