--- a/7 in 7.md
+++ b/7 in 7.md
@@ -24,4 +24,9 @@ I found it pretty interesting to make a rule of translating what people draw int
 #### Question: How can I help people feel and understand the nature of music by making their own music clips? How can I let people create chord progression by using visual pattern?
 <iframe width="560" height="315" src="https://www.youtube.com/embed/28omnvRgjCE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3698.jpg)
+#### Inspiration
+This prototype is inspired by the color version of Tonnetz, or "tone network", found in Riemannian theory. It is an arrangement of notes to illustrate harmonies and their relationships.
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/color-chords1.png)
+
 I found the process so interesting and I think there's a lot I can do to make it better.
+
