Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -22,6 +22,10 @@ I found it pretty interesting to make a rule of translating what people draw int
 
 ## Prototype 4
 #### Question: How can I help people feel and understand the nature of music by making their own music clips? How can I let people create chord progression by using visual pattern?
+I did a small research before. There are two webside of using computer keyboard to make music. 
+1
+2
+I asked people which one do they prefer and why, and I found that they all prefered the second one because they could play music randomly. The result was as I expected. The reason behind it is that the second website provide an accompany, or a certian chord progression,  when people press the computer keyboard to create melody, making the experience more "musical".But the first website is more like "sound effect" rather than "music".
 <iframe width="560" height="315" src="https://www.youtube.com/embed/28omnvRgjCE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3698.jpg)
 #### Inspiration
