Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -38,4 +38,16 @@ This prototype is inspired by the color version of Tonnetz, or "tone network", f
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/IMG_3704.JPG)
 
 I found the process so interesting and I think there's a lot I can do to make it better.
+“The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
+
+
+## Prototype 6 Palette for music
+#### Question: Is there correlation between music and color? How did people explore it before?
+#### Inspiration
+This prototype is inspired by Wassily Kandinsky, an artist who compared painting to making music. “The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/Kandinsky.png)
+#### Idea
+
+[Picture sources]（https://www.neilagustin.com/AbstractDigitalVisual-Art/）
+
 
