Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -47,7 +47,12 @@ I found the process so interesting and I think there's a lot I can do to make it
 This prototype is inspired by Wassily Kandinsky, an artist who compared painting to making music. “The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/Kandinsky.png)
 #### Idea
-
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
+Technology might be used: Machine learning album covers.
+Example:
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg)
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg)
 [Picture sources]（https://www.neilagustin.com/AbstractDigitalVisual-Art/）
 
 
