--- a/7 in 7.md
+++ b/7 in 7.md
@@ -42,14 +42,14 @@ I found the process so interesting and I think there's a lot I can do to make it
 
 
 ## Prototype 6 Palette for music
-#### Question: Is there correlation between music and color? How did people explore it before?
+#### Question: Is there correlation between music and color? How did people explore it before? How can I translate color into music?
 #### Inspiration
 This prototype is inspired by Wassily Kandinsky, an artist who compared painting to making music. “The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/Kandinsky.png)
 #### Idea
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
-Technology might be used: Machine learning album covers.
+Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
 Example:
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg)
