--- a/7 in 7.md
+++ b/7 in 7.md
@@ -51,6 +51,10 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
 Example:
+<div align="center">
+<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg" width="32%" height="32%">
+<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg" width="32%" height="32%">   
+</div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg)
 [Picture sources]（https://www.neilagustin.com/AbstractDigitalVisual-Art/）
