Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -52,8 +52,8 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
 Example:
 <div align="center">
-<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg" >
-<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg" >   
+<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg" width="50%" height="50%" >
+<img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg" width="50%" height="50%">   
 </div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg)
