Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -55,8 +55,7 @@ Example:
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg" width="40%" height="40%" >
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg" width="40%" height="40%">   
 </div>
-![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg)
-![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg)
-[Picture sources]（https://www.neilagustin.com/AbstractDigitalVisual-Art/）
+
+[Picture sources](https://www.neilagustin.com/AbstractDigitalVisual-Art/)
 
 
