Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -47,6 +47,7 @@ I found the process so interesting and I think there's a lot I can do to make it
 This prototype is inspired by Wassily Kandinsky, an artist who compared painting to making music. “The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/Kandinsky.png)
 #### Idea
+What if we can search music by color? What if we can use color to represent our emotion and then get the music we want?
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
@@ -55,6 +56,7 @@ Example:
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg" width="40%" height="40%" >
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg" width="40%" height="40%">   
 </div>
+
 
 [Picture sources](https://www.neilagustin.com/AbstractDigitalVisual-Art/)
 
