--- a/7 in 7.md
+++ b/7 in 7.md
@@ -50,7 +50,10 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 #### Idea
 What if we can search music by color? What if we can use color to represent our emotion and then get the music we want?
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
+
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
+<audio src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2audio-folder/Sleeping _at_Last - Arctic.mp3" controls></audio>
+
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
 Example:
 <div align="center">
