--- a/7 in 7.md
+++ b/7 in 7.md
@@ -50,7 +50,9 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 #### Idea
 What if we can search music by color? What if we can use color to represent our emotion and then get the music we want?
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
+<div align="center">
 <audio src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2audio-folder/SweetChildOMineMix.ncm" controls></audio>
+</div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 <div align="center">
 <audio src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2audio-folder/Sleeping _at_Last - Arctic.mp3" controls></audio>
