Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -55,7 +55,8 @@ What if we can search music by color? What if we can use color to represent our 
 </div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 <div align="center">
-<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/Sleeping_at_Last_Arctic.mp3" controls></audio>
+<audio src="./pro2audio-folder/Sleeping_at_LastArctic.mp3" controls></audio>
+
 </div>
 
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
