--- a/7 in 7.md
+++ b/7 in 7.md
@@ -51,13 +51,12 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 What if we can search music by color? What if we can use color to represent our emotion and then get the music we want?
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
 <div align="center">
-<audio src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2audio-folder/SweetChildOMineMix.ncm" controls></audio>
+<audio src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2audio-folder/SweetChildOMineMix.ncm?raw=true" controls></audio>
 </div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 <div align="center">
-<audio src="./pro2audio-folder/Sleeping_at_LastArctic.mp3" controls></audio>
+<audio src="./pro2audio-folder/Sleeping_at_LastArctic.mp3?raw=true" controls></audio>
 </div>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=28405264&auto=0&height=32"></iframe>
 
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
 Example:
@@ -65,8 +64,11 @@ Example:
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/rockPatternAlbum.jpg" width="40%" height="40%" >
 <img src="https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/sadPatternAlbum.jpg" width="40%" height="40%">   
 </div>
-
-
 [Picture sources](https://www.neilagustin.com/AbstractDigitalVisual-Art/)
+
+## Prototype 7 Song Maker
+#### Question: How can interaction happens in 3D space?
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/P7.jpg)
+The interaction could both happen in physical world or digital world like VR, depending on different technology.
 
 
