Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -51,7 +51,7 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 What if we can search music by color? What if we can use color to represent our emotion and then get the music we want?
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
 <div align="center">
-<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/SweetChildOMineMix.ncm?raw=true" controls></audio>
+<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/SweetChildOMineMix.mp3?raw=true" controls></audio>
 </div>
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 <div align="center">
