--- a/7 in 7.md
+++ b/7 in 7.md
@@ -40,7 +40,9 @@ This prototype is inspired by the color version of Tonnetz, or "tone network", f
 I found the process so interesting and I think there's a lot I can do to make it better.
 “The sound of colors is so definite that it would be hard to find anyone who would express bright yellow with base notes or dark lake with the treble.”
 
-## Prototype 4 Accompaniment Maker
+## Prototype 5 Accompaniment Maker
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ac5CcX9f6uM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/chordsFamily.jpg)
 
 ## Prototype 6 Palette for Music (A music searching tool)
 #### Question: Is there correlation between music and color? How did people explore it before? How can I translate color into music?
