Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -1,4 +1,6 @@
+## Research quesion
 Broader quesion: How can I explore the relationship between music and color or other visual pattern?
+
 Specific question: How can I make music more accessible by using visual works and democratize music expression?
 
 ## Prototype 1
@@ -58,10 +60,13 @@ This prototype is inspired by Wassily Kandinsky, an artist who compared painting
 #### Idea
 What if we can search music by color? What if we can use color to represent our emotion and then get the music we want? Now we search music by words. But I think color has its own expression which is different from the expression of words.
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
+
 <div align="center">
 <audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/SweetChildOMineMix.mp3?raw=true" preload=“auto” controls></audio>
 </div>
+
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
+
 <div align="center">
 <audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/Sleeping_at_Last_Arctic.mp3?raw=true" preload=“auto” controls></audio>
 </div>
