Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -1,4 +1,4 @@
-## Research quesion
+## Research questions
 Broader quesion: How can I explore the relationship between music and color or other visual pattern?
 
 Specific question: How can I make music more accessible by using visual works and democratize music expression?
