Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -1,7 +1,7 @@
 ## Research questions
 Broader quesion: How can I explore the relationship between music and color or other visual pattern?
 
-Specific question: How can I make music more accessible by using visual works and democratize music expression?
+Specific question: How can I make music more accesible and democratize music expression by using visual works?
 
 ## Prototype 1
 #### Question: How can I establish the rules to show the relationship between music and visual pattern?
