Update 7 in 7.md

--- a/7 in 7.md
+++ b/7 in 7.md
@@ -62,13 +62,13 @@ What if we can search music by color? What if we can use color to represent our 
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5rock.jpg)
 
 <div align="center">
-<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/SweetChildOMineMix.mp3?raw=true" preload=“auto” controls></audio>
+<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/SweetChildOMineMix.mp3?raw=true" controls></audio>
 </div>
 
 ![](https://github.com/EffieSong/effiesong.github.io/raw/master/pro2img-folder/p5sad.jpg)
 
 <div align="center">
-<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/Sleeping_at_Last_Arctic.mp3?raw=true" preload=“auto” controls></audio>
+<audio src="https://github.com/EffieSong/effiesong.github.io/blob/master/pro2audio-folder/Sleeping_at_Last_Arctic.mp3?raw=true" controls></audio>
 </div>
 
 Translating generated visual patterns into certain music might use the technology of Machine learning album covers.
